# diffuser

./: Cargo.toml  README.md  TODO.md
nannou src/: constants.rs  main.rs  matrix.rs  mod.rs
nannou src/model/: mod.rs
src/: app.rs  app_error.rs  constants.rs  main.rs  matrix.rs  model.rs  rect.rs  vector2.rs
src/app/: error.rs  mod.rs
