[package]
name = "diffuser"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-queue = "^0.2"
env_logger = "^0.8"
line_drawing = "0.8.0"
log = "^0.4"
pixels = "^0.2"
rand = "^0.7"
rayon = "^1.5"
thiserror = "^1.0"
winit = "^0.23"
winit_input_helper = "^0.8"
